@@ -71,6 +71,7 @@
 	* Renamed resources/css/jquery-ui/ to resources/css/eid_suggest/
 	* Moved plugin.tx_solr.suggest.stylesheet to plugin.tx_solr.cssFiles.suggest
 	* Fixed styling of suggestions list, forcing list-style: none
+	* Changed the Solr status report to also list the site a status belongs to
 
 2012-02-13  Ingo Renner  <ingo.renner@dkd.de>
 
